feat: 实战：Three.js Editor（七）

--- a/threejs-editor/src/App.scss
+++ b/threejs-editor/src/App.scss
@@ -18,6 +18,16 @@ body {
     .Main {
         width: 1000px;
         border-right: 1px solid #000;
+
+        position: relative;
+
+        .btn-group {
+            width: 100px;
+            height: 200px;
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
     }
 
     .Properties {
