feat: 实战：酷家乐装修编辑器（三）

--- a/home-decoration-editor/src/App.scss
+++ b/home-decoration-editor/src/App.scss
@@ -30,6 +30,7 @@ body {
         .Properties {
             position: absolute;
             top: 0;
+            z-index: 10;
             width: 300px;
             height: calc(100vh - 60px);
             background: pink;
@@ -63,5 +64,28 @@ body {
                 left: -10px;
             }
         }
+
+        .Main {
+            position: relative;
+            height: calc(100vh - 60px);
+
+            #threejs-3d-container {
+                position: absolute;
+                z-index: 1;
+            }
+
+            #threejs-2d-container {
+                position: absolute;
+                z-index: 2;
+            }
+
+            .mode-change-btns {
+                position: absolute;
+                z-index: 3;
+                bottom: 20px;
+                left: 20px;
+            }
+        }
+
     }
 }
